Complete Phase 3: Slide generator enhancements and content improvements
- Added missing slides: 'Constructing the Object Is Still Brittle' and 'DI and Controllers - FastAPI Limitations'
- Implemented .code[] wrapper support for special code block formatting
- Added layout class support (reduce90, enlarge150) to slide generator
- Restored missing contributor (bgruening) to metadata
- Made contributors dynamic in template (from metadata)
- Updated unified approach slide to use diff format
- Created GitHub issue #1 for navigation footer feature
- Updated PLAN.md to reflect Phase 3 completion
- All images integrated and working correctly

--- a/outputs/training-slides/template.html
+++ b/outputs/training-slides/template.html
@@ -12,7 +12,8 @@ key_points:
 {% for key_point in key_points %}  - "{{ key_point }}"
 {% endfor %}subtopic: architecture
 contributors:
-  - jmchilton
+{% for contributor in contributors %}  - {{ contributor }}
+{% endfor %}
 
 ---
 layout: true
