--- a/outputs/training-slides/template.html
+++ b/outputs/training-slides/template.html
@@ -32,7 +32,7 @@ topic_name: Galaxy Architecture
 
 # {{ title }}
 
-*The architecture of connecting Galaxy components.*
+*{{ subtitle }}.*
 
 ---
 
