Remove closing --- from slide template
Don't add separator after last slide - it's unnecessary for Remark.js and creates inconsistency with training-material format.

--- a/outputs/training-slides/template.html
+++ b/outputs/training-slides/template.html
@@ -38,7 +38,8 @@ topic_name: Galaxy Architecture
 
 {% for slide in slides %}
 {{ slide }}
+{% if not loop.last %}
 
 ---
+{% endif %}
 {% endfor %}
-
