--- a/outputs/training-slides/html_wrapper_template.html
+++ b/outputs/training-slides/html_wrapper_template.html
@@ -52,6 +52,7 @@
             top: 30px;
             left: 0px;
             width: 100%;
+            font-weight: 500;
         }
 
         .remark-slide-content h1 {
