More styling fixes.

--- a/outputs/training-slides/html_wrapper_template.html
+++ b/outputs/training-slides/html_wrapper_template.html
@@ -87,6 +87,10 @@
             margin: 0.5em 0;
         }
         */
+        .remark-code {
+            text-align: left;
+        }
+
         .remark-slide-content pre code {
             background-color: transparent;
             padding: 0;
